add desctioption for images in whatwedo section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="./index.html" class="nav-studio active-page">Студія</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./pages/portfolio.html" class="nav-portfolio">Портфоліо</a>
+                        <a href="./portfolio.html" class="nav-portfolio">Портфоліо</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-contacts">Контакти</a>
@@ -101,12 +101,15 @@
                 <ul class="whatwedo-list">
                     <li class="whatwedo-item">
                         <img src="./img/tablet.jpg" alt="tablet" class="whatwedo-img">
+                        <p class="whatwedo-desc">Десктопні додатки</p>
                     </li>
                     <li class="whatwedo-item">
                         <img src="./img/comp.jpg" alt="leptop" class="whatwedo-img">
+                        <p class="whatwedo-desc">Мобільні додатки</p>
                     </li>
                     <li class="whatwedo-item">
                         <img src="./img/tel.jpg" alt="ipad" class="whatwedo-img">
+                        <p class="whatwedo-desc">Дизайнерські рішення</p>
                     </li>
                 </ul>
             </div>
@@ -235,7 +238,7 @@
                                 <li class="roster-item">
                                     <a href="#" class="roster-link">
                                         <svg class="roster-image">
-                                            <use class="roster-svg" href="./img/symbol-defs.svg#icon-icon-instagram"></use>
+                                            <use href="./img/symbol-defs.svg#icon-icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -293,7 +296,7 @@
                     </li>
                     <li class="schedule-item">
                         <a href="#" class="schedule-link other-size">
-                            <svg class="schedule-image foosters-peters">
+                            <svg class="schedule-image fooster_peters">
                                 <use href="./img/symbol-defs.svg#icon-foster-peter"></use>
                             </svg>
                         </a>
@@ -301,7 +304,7 @@
                     <li class="schedule-item">
                         <a href="#" class="schedule-link">
                             <svg class="schedule-image">
-                                <use href="./img/symbol-defs.svg#icon-brand"></use>
+                                <use href="./img/symbol-defs.svg#icon-company"></use>
                             </svg>
                         </a>
                     </li>
