--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
                 <h2 class="whatwedo-title">Чим ми займаємося</h2>
                 <ul class="whatwedo-list">
                     <li class="whatwedo-item">
-                        <img src="./img/tablet.jpg" alt="tablet" class="whatwedo-img">
+                        <img src="./img/comp.jpg" alt="tablet" class="whatwedo-img">
                         <p class="whatwedo-desc">Десктопні додатки</p>
                     </li>
                     <li class="whatwedo-item">
-                        <img src="./img/comp.jpg" alt="leptop" class="whatwedo-img">
+                        <img src="./img/tel.jpg" alt="leptop" class="whatwedo-img">
                         <p class="whatwedo-desc">Мобільні додатки</p>
                     </li>
                     <li class="whatwedo-item">
-                        <img src="./img/tel.jpg" alt="ipad" class="whatwedo-img">
+                        <img src="./img/tablet.jpg" alt="ipad" class="whatwedo-img">
                         <p class="whatwedo-desc">Дизайнерські рішення</p>
                     </li>
                 </ul>
