--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
               type="text"
               name="user-name"
               id="user-name"
+              required
             />
             <svg class="form-icon" width="18" height="18">
                     <use href="./img/symbol-defs.svg#icon-person">
@@ -495,7 +496,7 @@
 
           <div class="form-field">
             <label class="form-obiect" for="tel">Телефон</label>
-            <input class="form-input" type="tel" name="tel" id="tel" />
+            <input class="form-input" required type="tel" name="tel" id="tel" />
             <svg class="form-icon" width="18" height="18">
                     <use href="./img/symbol-defs.svg#icon-phone">
                     </use>
@@ -504,7 +505,7 @@
 
           <div class="form-field">
             <label class="form-obiect" for="email">Пошта</label>
-            <input class="form-input" type="text" name="email" id="email" />
+            <input class="form-input" required type="text" name="email" id="email" />
             <svg class="form-icon" width="18" height="18">
                     <use href="./img/symbol-defs.svg#icon-modal-email">
                     </use>
@@ -518,7 +519,7 @@
           ></textarea>
           <div class="form-agreement">
             <label class="check-label" for="user-check"> 
-               <input class="form-checkbox visually-hidden "  type="checkbox" name="user-check" id="user-check"/>
+               <input class="form-checkbox visually-hidden "  type="checkbox" name="user-check" id="user-check" required/>
                <span class="form-check">  
                   <svg class="check-icon" width="11" height="8">
                    <use href="./img/symbol-defs.svg#icon-phone"></use>
