--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="./index.html" class="nav-link nav-link-active">Студія</a>
             </li>
             <li class="nav-item">
-              <a href="./pages/portfolio.html"class=nav-link">Портфоліо</a>
+              <a href="./pages/portfolio.html"class=nav-link>Портфоліо</a>
             </li>
             <li class="nav-item">
               <a href="#contacts" class="nav-link">Контакти</a>
