--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/reset.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
@@ -29,7 +34,7 @@
               <a href="./index.html" class="nav-link nav-link-active">Студія</a>
             </li>
             <li class="nav-item">
-              <a href="./pages/portfolio.html"class=nav-link>Портфоліо</a>
+              <a href="./pages/portfolio.html" class="nav-link">Портфоліо</a>
             </li>
             <li class="nav-item">
               <a href="#contacts" class="nav-link">Контакти</a>
@@ -68,13 +73,13 @@
         </div>
       </section>
       <!-- почему мы -->
-      <section class="benefits-section">
+      <section class="benefits-section"></section>
         <div class="container">
           <h2 class="benefits-uptitle visually-hidden">Почему мы</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <div class="benefits-icon">
-               <img src="./img/antenna.png" alt="#">
+                <img src="./img/antenna.png" alt="#" />
               </div>
               <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="benefits-description">
@@ -84,7 +89,7 @@
             </li>
             <li class="benefits-item">
               <div class="benefits-icon">
-                <img src="./img/clock.png" alt="#">
+                <img src="./img/clock.png" alt="#" />
               </div>
               <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="benefits-description">
@@ -94,7 +99,7 @@
             </li>
             <li class="benefits-item">
               <div class="benefits-icon">
-                <img src="./img/diagram.png" alt="">
+                <img src="./img/diagram.png" alt="" />
               </div>
               <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
               <p class="benefits-description">
@@ -103,7 +108,7 @@
             </li>
             <li class="benefits-item">
               <div class="benefits-icon">
-                <img src="./img/astronaut.png" alt="">
+                <img src="./img/astronaut.png" alt="" />
               </div>
               <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="benefits-description">
@@ -123,21 +128,13 @@
               <div class="work-text-posicion">
                 <h3 class="work-text">Десктопні додатки</h3>
               </div>
-              <img
-                src="./img/comp.jpg"
-                alt="планшетные решения"
-                width="370"
-              />
+              <img src="./img/comp.jpg" alt="планшетные решения" width="370" />
             </li>
             <li class="work-item">
               <div class="work-text-posicion">
                 <h3 class="work-text">Мобільні додатки</h3>
               </div>
-              <img
-                src="./img/tel.jpg"
-                alt="мобильные решения"
-                width="370"
-              />
+              <img src="./img/tel.jpg" alt="мобильные решения" width="370" />
             </li>
             <li class="work-item">
               <div class="work-text-posicion">
@@ -158,11 +155,7 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img
-                src="./img/igor.jpg"
-                alt="product-designer"
-                width="270"
-              />
+              <img src="./img/igor.jpg" alt="product-designer" width="270" />
               <div class="team-card">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="team-function">Product Designer</p>
@@ -179,7 +172,9 @@
                   <li class="social-item">
                     <a href="#" class="social-link">
                       <svg class="social-icon" width="20" height="20">
-                        <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                        <use
+                          href="./img/symbol-defs.svg#icon-icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -205,11 +200,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./img/olya.jpg"
-                alt="frontend-developer"
-                width="270"
-              />
+              <img src="./img/olya.jpg" alt="frontend-developer" width="270" />
               <div class="team-card">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p class="team-function">Frontend Developer</p>
@@ -226,7 +217,9 @@
                   <li class="social-item">
                     <a href="#" class="social-link"
                       ><svg class="social-icon" width="20" height="20">
-                        <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                        <use
+                          href="./img/symbol-defs.svg#icon-icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -269,7 +262,9 @@
                   <li class="social-item">
                     <a href="#" class="social-link"
                       ><svg class="social-icon" width="20" height="20">
-                        <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                        <use
+                          href="./img/symbol-defs.svg#icon-icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -295,11 +290,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./img/mihailo.jpg"
-                alt="ui-designer"
-                width="270"
-              />
+              <img src="./img/mihailo.jpg" alt="ui-designer" width="270" />
               <div class="team-card">
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p class="team-function">UI Designer</p>
@@ -316,7 +307,9 @@
                   <li class="social-item">
                     <a href="#" class="social-link"
                       ><svg class="social-icon" width="20" height="20">
-                        <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                        <use
+                          href="./img/symbol-defs.svg#icon-icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -462,11 +455,11 @@
         <div class="footer-form">
           <h3 class="footer-form-title">Підпишіться на розсилку</h3>
           <form>
-            <input class="footer-input" type="text" placeholder="E-mail">
-            <button class="footer-button" type="submit">Підписатися 
+            <input class="footer-input" type="text" placeholder="E-mail" />
+            <button class="footer-button" type="submit">
+              Підписатися
               <svg class="footer-send">
-                <use href="./img/symbol-defs.svg#icon-send">
-                </use>
+                <use href="./img/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
           </form>
@@ -489,44 +482,53 @@
               required
             />
             <svg class="form-icon" width="18" height="18">
-                    <use href="./img/symbol-defs.svg#icon-person">
-                    </use>
-                  </svg>
+              <use href="./img/symbol-defs.svg#icon-person"></use>
+            </svg>
           </div>
 
           <div class="form-field">
             <label class="form-obiect" for="tel">Телефон</label>
             <input class="form-input" required type="tel" name="tel" id="tel" />
             <svg class="form-icon" width="18" height="18">
-                    <use href="./img/symbol-defs.svg#icon-phone">
-                    </use>
-                  </svg>
+              <use href="./img/symbol-defs.svg#icon-phone"></use>
+            </svg>
           </div>
 
           <div class="form-field">
             <label class="form-obiect" for="email">Пошта</label>
-            <input class="form-input" required type="text" name="email" id="email" />
+            <input
+              class="form-input"
+              required
+              type="text"
+              name="email"
+              id="email"
+            />
             <svg class="form-icon" width="18" height="18">
-                    <use href="./img/symbol-defs.svg#icon-modal-email">
-                    </use>
-                  </svg>
+              <use href="./img/symbol-defs.svg#icon-modal-email"></use>
+            </svg>
           </div>
-          <label class="form-obiect"for="coment">Коментар</label>
-          <textarea 
+          <label class="form-obiect" for="coment">Коментар</label>
+          <textarea
             class="form-textarea"
             name="feedback"
-            placeholder="Введіть текст" id="coment"
+            placeholder="Введіть текст"
+            id="coment"
           ></textarea>
           <div class="form-agreement">
-            <label class="check-label" for="user-check"> 
-               <input class="form-checkbox visually-hidden "  type="checkbox" name="user-check" id="user-check" required/>
-               <span class="form-check">  
-                  <svg class="check-icon" width="11" height="8">
-                   <use href="./img/symbol-defs.svg#icon-phone"></use>
-                  </svg>
-                </span>
-              <span> Погоджуюся з розсилкою та приймаю
+            <label class="check-label" for="user-check">
+              <input
+                class="form-checkbox visually-hidden"
+                type="checkbox"
+                name="user-check"
+                id="user-check"
+                required
+              />
+              <span class="form-check">
+                <svg class="check-icon" width="11" height="8">
+                  <use href="./img/symbol-defs.svg#icon-phone"></use>
+                </svg>
               </span>
+              <span> Погоджуюся з розсилкою та приймаю </span>
             </label>
             <a class="form-link-decoration" href="#">Умови договору</a>
           </div>
@@ -540,5 +542,8 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
