--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- шапка -->
-    <header class="header">
+    <header class="header"data-aos="fade-left">
       <div class="container">
         <nav class="nav">
           <a href="/" class="logo"
@@ -73,7 +73,7 @@
         </div>
       </section>
       <!-- почему мы -->
-      <section class="benefits-section"></section>
+      <section class="benefits-section" data-aos="fade-down-right">
         <div class="container">
           <h2 class="benefits-uptitle visually-hidden">Почему мы</h2>
           <ul class="benefits-list">
@@ -120,7 +120,7 @@
         </div>
       </section>
       <!-- чем мы занимаемся -->
-      <section class="work-section">
+      <section class="work-section" data-aos="fade-down-right">
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-list">
@@ -150,7 +150,7 @@
         </div>
       </section>
       <!-- наша команда -->
-      <section class="team-section">
+      <section class="team-section" data-aos="fade-down-right">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
@@ -339,7 +339,7 @@
 
         <!-- наши клиенты -->
       </section>
-      <section class="clients-section">
+      <section class="clients-section" data-aos="fade-down-right">
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list">
@@ -390,7 +390,7 @@
       </section>
     </main>
     <!-- подвал -->
-    <footer>
+        <footer data-aos="fade-down-right">
       <div class="container">
         <div>
           <a href="/" class="logo-footer"
@@ -542,6 +542,7 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
