--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- шапка -->
-    <header class="header">
+    <header class="header" data-aos="fade-down">
       <div class="container">
         <nav class="nav">
           <a href="/" class="logo"
@@ -118,7 +118,7 @@
     <!-- основной контент -->
     <main>
       <!-- секция герой -->
-      <section class="hero">
+      <section class="hero" data-aos="fade-left">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__button" data-modal-open>
@@ -127,7 +127,7 @@
         </div>
       </section>
       <!-- почему мы -->
-      <section class="benefits">
+      <section class="benefits" data-aos="fade-down-left">
         <div class="container">
           <h2 class="benefits__uptitle visually-hidden">Почему мы</h2>
           <ul class="benefits__list">
@@ -182,7 +182,7 @@
         </div>
       </section>
       <!-- чем мы занимаемся -->
-      <section class="work">
+      <section class="work" data-aos="fade-down-left">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -208,7 +208,7 @@
         </div>
       </section>
       <!-- наша команда -->
-      <section class="team">
+      <section class="team" data-aos="fade-down-left">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -404,7 +404,7 @@
       </section>
 
       <!-- наши клиенты -->
-      <section class="clients">
+      <section class="clients" data-aos="fade-down-left">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
@@ -455,7 +455,7 @@
       </section>
     </main>
     <!-- подвал -->
-    <footer>
+    <footer data-aos="fade-down-left">
       <div class="container">
         <div class="footer-section">
           <a href="/" class="logo__footer"
