--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- шапка -->
-    <header class="header">
+    <header class="header" data-aos="fade-down-left">
       <div class="container">
         <nav class="nav">
           <a href="../index.html" class="logo"
@@ -45,7 +45,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="contacts">
+        <ul class="contacts" data-aos="fade-down-left">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
@@ -120,7 +120,7 @@
       </div>
     </header>
     <!--основной контент-->
-    <section class="portfolio">
+    <section class="portfolio" data-aos="fade-down-left">
       <div class="container">
         <h2 hidden>навигационные кнопки</h2>
         <ul class="services">
@@ -338,7 +338,7 @@
       </div>
     </section>
     <!-- футер -->
-    <footer>
+    <footer data-aos="fade-down-left">
       <div class="container">
              <div class="footer-section">
           <a href="/" class="logo__footer"
