--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </a>
           <button class="nav__button" type="button" modal-header-open>
             <svg width="40" height="40">
-              <use href="./images/symbol-defs.svg#menu-icon"></use>
+              <use href="./img/symbol-defs.svg#icon-menu"></use>
             </svg>
           </button>
           <ul class="nav__list">
@@ -70,15 +70,15 @@
             </button>
             <ul class="mob-menu-list">
               <li class="mob-menu-list__item">
-                <a href="./index.html" class="mob-menu-list__link">Студия</a>
+                <a href="./index.html" class="mob-menu-list__link">Студія</a>
               </li>
               <li class="mob-menu-list__item">
                 <a href="./peges/portfolio.html" class="mob-menu-list__link"
-                  >Портфолио</a
+                  >Портфоліо</a
                 >
               </li>
               <li class="mob-menu-list__item">
-                <a href="" class="mob-menu-list__link">Контакты</a>
+                <a href="" class="mob-menu-list__link">Контакти</a>
               </li>
             </ul>
             <ul class="mob-menu-contacts">
@@ -117,17 +117,17 @@
     </header>
     <!-- основной контент -->
     <main>
-      <!-- секция герой -->
-      <!-- <section class="hero" data-aos="fade-left">
+      <!-- секция герой  -->
+    <section class="hero" data-aos="fade-left">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__button" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section> -->
-      <!-- почему мы -->
-      <!-- <section class="benefits" data-aos="fade-down-left">
+      </section>
+       <!-- почему мы  -->
+      <section class="benefits" data-aos="fade-down-left">
         <div class="container">
           <h2 class="benefits__uptitle visually-hidden">Почему мы</h2>
           <ul class="benefits__list">
@@ -180,9 +180,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- чем мы занимаемся -->
-      <!-- <section class="work" data-aos="fade-down-left">
+      <section class="work" data-aos="fade-down-left">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -206,9 +206,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- наша команда -->
-      <!-- <section class="team" data-aos="fade-down-left">
+      <section class="team" data-aos="fade-down-left">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -398,13 +398,13 @@
               </div>
             </li>
           </ul>
-        </div>
+        </div> 
 
-         наши клиенты -->
+       
       </section> 
 
       <!-- наши клиенты -->
-      <!-- <section class="clients" data-aos="fade-down-left">
+      <section class="clients" data-aos="fade-down-left">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
@@ -453,9 +453,9 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!-- подвал -->
-    <!-- <footer data-aos="fade-down-left">
+    <footer data-aos="fade-down-left">
       <div class="container">
         <div class="footer-section">
           <a href="/" class="logo__footer"
@@ -530,10 +530,10 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <p class="modal__description">Залиште свої дані, ми вам передзвонимо</p>
         <form class="modal__form">
@@ -597,7 +597,7 @@
           </svg>
         </button>
       </div>
-    </div> -->
+    </div>
     <script src="./js/modal-header.js"></script>
     <script src="./js/modal.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
