--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- шапка -->
-    <header class="header" data-aos="fade-down">
+    <header class="header">
       <div class="container">
         <nav class="nav">
           <a href="/" class="logo"
@@ -118,7 +118,7 @@
     <!-- основной контент -->
     <main>
       <!-- секция герой  -->
-    <section class="hero" data-aos="fade-left">
+    <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__button" data-modal-open>
@@ -127,7 +127,7 @@
         </div>
       </section>
        <!-- почему мы  -->
-      <section class="benefits" data-aos="fade-down-left">
+      <section class="benefits">
         <div class="container">
           <h2 class="benefits__uptitle visually-hidden">Почему мы</h2>
           <ul class="benefits__list">
@@ -182,7 +182,7 @@
         </div>
       </section>
       <!-- чем мы занимаемся -->
-      <section class="work" data-aos="fade-down-left">
+      <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -208,7 +208,7 @@
         </div>
       </section>
       <!-- наша команда -->
-      <section class="team" data-aos="fade-down-left">
+      <section class="team" >
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -398,13 +398,11 @@
               </div>
             </li>
           </ul>
-        </div> 
-
-       
+        </div>
       </section> 
 
       <!-- наши клиенты -->
-      <section class="clients" data-aos="fade-down-left">
+      <section class="clients" >
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
@@ -455,7 +453,7 @@
       </section>
     </main>
     <!-- подвал -->
-    <footer data-aos="fade-down-left">
+    <footer>
       <div class="container">
         <div class="footer-section">
           <a href="/" class="logo__footer"
@@ -601,8 +599,5 @@
     <script src="./js/modal-header.js"></script>
     <script src="./js/modal.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </body>
 </html>
